--- a/EducationUSA/GoogleService-Info.plist
+++ b/EducationUSA/GoogleService-Info.plist
@@ -2,39 +2,37 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
-	<string>ca-app-pub-3940256099942544/2934735716</string>
-	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
-	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>688458737690-vdo17qqkss46bgo95011thqr2l3eousg.apps.googleusercontent.com</string>
+	<string>147043428650-kvblhpn0mvl7re1iq5du7677u948q7p5.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.688458737690-vdo17qqkss46bgo95011thqr2l3eousg</string>
+	<string>com.googleusercontent.apps.147043428650-kvblhpn0mvl7re1iq5du7677u948q7p5</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>147043428650-c43qt94gvg6mcao9ckq0slog747019fl.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDv_YGoEYibhiLIxboY0ZLlKylzejH_pVE</string>
+	<string>AIzaSyD8ijDaMvvAOXIX73vvIu7G-a-oZjVzAiQ</string>
 	<key>GCM_SENDER_ID</key>
-	<string>688458737690</string>
+	<string>147043428650</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.clientapp.educationusa</string>
+	<string>com.teamingic.educationusanew</string>
 	<key>PROJECT_ID</key>
-	<string>educationusa-223213</string>
+	<string>educationusabahrain</string>
 	<key>STORAGE_BUCKET</key>
-	<string>educationusa-223213.appspot.com</string>
+	<string>educationusabahrain.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
 	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
 	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:688458737690:ios:bb57b68a3990bf51</string>
+	<string>1:147043428650:ios:cab44d2c12da48d0cf9653</string>
 	<key>DATABASE_URL</key>
-	<string>https://educationusa-223213.firebaseio.com</string>
+	<string>https://educationusabahrain.firebaseio.com</string>
 </dict>
 </plist>
